fix: truncate long title in ModalHeader

--- a/src/app/styles/App.css
+++ b/src/app/styles/App.css
@@ -9,9 +9,9 @@
 .header-wrapper {
 	position: absolute;
 	top: 0;
+	right: 0;
 	left: 0;
 	z-index: 10;
-	width: 100%;
 	height: var(--header-height);
 	margin: 0 auto;
 	background-image: linear-gradient(
