--- a/src/shared/ui/modal-layout/ui/ModalHeader.module.css
+++ b/src/shared/ui/modal-layout/ui/ModalHeader.module.css
@@ -32,8 +32,7 @@
 
 /* title */
 .title {
-	display: flex;
-	align-items: center;
+	align-content: center;
 	height: 48px;
 	padding: 0 16px;
 	overflow: hidden;
